# HPC_Kokkos_HS

./: Hauptseminar HPC.pptx  HauptseminarHerg.txt  heat
src/: 1  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  heat  heat_ar_par  heat_diff.cpp  heat_diff_hpx.cpp  heat_diff_hpx_v2.cpp  heat_ser  heat_seriell  heat_v2  test.txt
src/Kokkos/: KokkosCore_config.h  KokkosCore_config.tmp  Makefile  Makefile.richtig  heat_diff.cpp  heat_kokkos.host
src/Kokkos/hidden/: Makefile3  altMakefile
